[gd_scene load_steps=10 format=3 uid="uid://dceehn6xo2ne1"]

[ext_resource type="Script" path="res://weapons/laser_beam/laser_beam.gd" id="1_wxso6"]
[ext_resource type="Texture2D" uid="uid://cvqhkc7hbqkk1" path="res://assets/laser_beam_red_start.png" id="2_iybaf"]
[ext_resource type="Texture2D" uid="uid://piojnacb6s14" path="res://assets/laser_beam_red_single.png" id="2_xvm6u"]
[ext_resource type="Texture2D" uid="uid://b2wwurxfaghv7" path="res://assets/laser_beam_red_middle.png" id="3_l2u6l"]
[ext_resource type="Texture2D" uid="uid://nsfnbidbo1x8" path="res://assets/laser_beam_red_end.png" id="4_c7o5l"]
[ext_resource type="Shader" path="res://weapons/laser_beam/laser_beam.gdshader" id="5_bg4a6"]
[ext_resource type="PackedScene" uid="uid://c8l4jg5n8i3h1" path="res://weapons/laser_beam/laser_beam_red_particles_shooting.tscn" id="7_7lfvw"]
[ext_resource type="PackedScene" uid="uid://dc54tuvfhgex2" path="res://weapons/laser_beam/laser_beam_red_particles_hit.tscn" id="7_a18og"]
[ext_resource type="Texture2D" uid="uid://dn77pihvmj63u" path="res://assets/combo_bar_fill.png" id="9_if777"]

[node name="LaserBeam" type="Node2D"]
script = ExtResource("1_wxso6")
beam_texture_single = ExtResource("2_xvm6u")
beam_texture_start = ExtResource("2_iybaf")
beam_texture_middle = ExtResource("3_l2u6l")
beam_texture_end = ExtResource("4_c7o5l")
beam_shader = ExtResource("5_bg4a6")
shooting_particles_scene = ExtResource("7_7lfvw")
hit_particles_scene = ExtResource("7_a18og")

[node name="Raycasts" type="Node2D" parent="."]

[node name="Hitboxes" type="Node2D" parent="."]

[node name="Beams" type="Node2D" parent="."]

[node name="ShootingParticles" type="Node2D" parent="."]

[node name="HitParticles" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(1, 0, 0, 1)
texture = ExtResource("9_if777")
centered = false
offset = Vector2(2.08165e-12, -40)
region_enabled = true
region_rect = Rect2(2.08165e-12, 2.08165e-12, 300, 80)
